--- a/wiki/APIDocumentation.wiki
+++ b/wiki/APIDocumentation.wiki
@@ -1,4 +1,5 @@
-#summary One-sentence summary of this page.
+#summary Contains Documentation on the API Used
+#labels Phase-Implementation
 
 = API Documentation =
 
