--- a/trunk/Properties/Resources.resx
+++ b/trunk/Properties/Resources.resx
@@ -46,7 +46,7 @@
     
     mimetype: application/x-microsoft.net.object.binary.base64
     value   : The object must be serialized with 
-            : System.Serialization.Formatters.Binary.BinaryFormatter
+            : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
             : and then encoded with base64 encoding.
     
     mimetype: application/x-microsoft.net.object.soap.base64
@@ -60,6 +60,7 @@
             : and then encoded with base64 encoding.
     -->
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
+    <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
     <xsd:element name="root" msdata:IsDataSet="true">
       <xsd:complexType>
         <xsd:choice maxOccurs="unbounded">
@@ -68,9 +69,10 @@
               <xsd:sequence>
                 <xsd:element name="value" type="xsd:string" minOccurs="0" />
               </xsd:sequence>
-              <xsd:attribute name="name" type="xsd:string" />
+              <xsd:attribute name="name" use="required" type="xsd:string" />
               <xsd:attribute name="type" type="xsd:string" />
               <xsd:attribute name="mimetype" type="xsd:string" />
+              <xsd:attribute ref="xml:space" />
             </xsd:complexType>
           </xsd:element>
           <xsd:element name="assembly">
@@ -85,9 +87,10 @@
                 <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
                 <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
               </xsd:sequence>
-              <xsd:attribute name="name" type="xsd:string" msdata:Ordinal="1" />
+              <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1" />
               <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
               <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
+              <xsd:attribute ref="xml:space" />
             </xsd:complexType>
           </xsd:element>
           <xsd:element name="resheader">
@@ -114,4 +117,200 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="icon74_14" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon74_14.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon06_06" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon06_06.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon07_12" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon07_12.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon09_02" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon09_02.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon09_08" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon09_08.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon10_07" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon10_07.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon10_10" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon10_10.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon12_01" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon12_01.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon12_07" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon12_07.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon24_06" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon24_06.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon24_14" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon24_14.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon27_10" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon27_10.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon33_02" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon33_02.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon40_14" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon40_14.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon47_01" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon47_01.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon47_02" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon47_02.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon47_03" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon47_03.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon47_04" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon47_04.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon47_05" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon47_05.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon47_06" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon47_06.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon47_07" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon47_07.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon47_08" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon47_08.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon47_09" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon47_09.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon47_10" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon47_10.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon47_11" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon47_11.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon47_12" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon47_12.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon47_13" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon47_13.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon47_14" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon47_14.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon47_15" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon47_15.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon47_16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon47_16.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon49_08" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon49_08.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon49_09" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon49_09.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon49_10" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon49_10.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon49_11" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon49_11.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon49_12" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon49_12.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon49_13" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon49_13.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon49_14" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon49_14.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon49_15" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon49_15.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon49_16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon49_16.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon50_01" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon50_01.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon50_02" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon50_02.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon50_04" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon50_04.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon50_05" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon50_05.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon50_06" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon50_06.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon50_07" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon50_07.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon50_08" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon50_08.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon50_09" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon50_09.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon50_10" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon50_10.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon51_01" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon51_01.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon51_02" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon51_02.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon51_03" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon51_03.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon51_04" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon51_04.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon51_05" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon51_05.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon51_06" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon51_06.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon51_07" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon51_07.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon51_09" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon51_09.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon51_10" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon51_10.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon51_11" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon51_11.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon51_12" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon51_12.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon51_13" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon51_13.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon51_14" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon51_14.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon51_15" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon51_15.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon51_16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon51_16.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon55_12" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon55_12.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon57_03" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon57_03.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
