Can now grab current prices from eve-central.com (please dont abuse, there is no caching at the moment)

--- a/FuelCalculator.resx
+++ b/FuelCalculator.resx
@@ -123,12 +123,6 @@
   <metadata name="Moon.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="UseStarbase.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Moon.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
   <data name="label112.Text" xml:space="preserve">
     <value>Manual Mode is used to calculate basic
 fuel needs without taking into account
@@ -157,4 +151,7 @@ to buy to keep all selected starbases
 running as long as possible will be
 displayed.</value>
   </data>
+  <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
