--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -313,4 +313,49 @@
   <data name="icon57_03" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\icons\icon57_03.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="icon06_02" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon06_02.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon06_03" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon06_03.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon06_07" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon06_07.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon07_04" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon07_04.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon07_09" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon07_09.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon09_04" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon09_04.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon25_08" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon25_08.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon34_06" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon34_06.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon49_03" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon49_03.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon51_08" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon51_08.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon53_11" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon53_11.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon57_07" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon57_07.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon57_08" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon57_08.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon57_13" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon57_13.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon63_03" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon63_03.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
