--- a/trunk/Properties/Resources.resx
+++ b/trunk/Properties/Resources.resx
@@ -346,6 +346,12 @@
   <data name="icon53_11" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\icons\icon53_11.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="icon57_05" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon57_05.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon57_06" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icon57_06.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="icon57_07" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\icons\icon57_07.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
