--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -1,4 +1,5 @@
 #summary Installing EVEPOSMON and your first run.
+#labels Featured,Phase-Deploy
 = Introduction =
 
 This document explains how to install eveposmon, the requirements and what to expect on your first run.
